<resources>
    <string name="app_name">FirebaseAuth</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_out">Sign Out</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="or">OR</string>
    <string name="logo">Logo</string>
    <string name="get_link_password">Get Link Password</string>
    <string name="title">Title</string>
    <string name="detail">Detail ....</string>
    <string name="submit">Submit</string>
    <string name="add_note">Add Note</string>
    <string name="created_at">Created at : </string>
    <string name="logout">Logout</string>
</resources>
